--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -21,7 +21,7 @@
                 <h4>Where will you get all of the content for your site (ie. images & text)?</h4>
                 <p>I will create all my own content for this site.</p>
                 <h4>Why should users care about the focus of the site?</h4>
-                <p>Users looking for unique designs will care about the focus of the site.</p>
+                <p>The website will show my personal designs that are available for users to buy.</p>
                 <h4>Why should a site be built for this?</h4>
                 <p>A site makes it easier for me to get my designs out to a broader audience.</p>
                 <h4>What would you like users to do at your site?</h4>
