--- a/index.html/milestone1/index.html
+++ b/index.html/milestone1/index.html
@@ -11,7 +11,7 @@
             </header>
             <nav>
                 <a href="index.html">Home</a> &nbsp; &nbsp; &nbsp; &nbsp;
-                <a href="Competition.html">Competition</a> &nbsp; &nbsp;&nbsp; &nbsp;
+                <a href="competition.html">Competition</a> &nbsp; &nbsp;&nbsp; &nbsp;
                 <a href="audience">Audience</a>&nbsp; &nbsp;&nbsp; &nbsp;
             </nav>
             <main>
