--- a/index.html/milestone1/audience.html
+++ b/index.html/milestone1/audience.html
@@ -12,7 +12,7 @@
             <nav>
                 <a href="index.html">Home</a> &nbsp; &nbsp; &nbsp; &nbsp;
                 <a href="competition.html">Competition</a> &nbsp; &nbsp;&nbsp; &nbsp;
-                <a href="audience">Audience</a>&nbsp; &nbsp;&nbsp; &nbsp;
+                <a href="audience.html">Audience</a>&nbsp; &nbsp;&nbsp; &nbsp;
             </nav>
             <main>
                 <h4>Geolocation - where the primary audience lives</h4>
