--- a/index.html/milestone1/audience.html
+++ b/index.html/milestone1/audience.html
@@ -20,7 +20,7 @@
                 <h4>Age - Specify the age ranges that will primarily be using the site</h4>
                 <p>I am targeting women ages anywhere from teens to retirement ages.</p>
                 <h4>Gender - the gender of the majority of your users</h4>
-                <p>My main gender target market is Women.</p>
+                <p>My main gender target market is women.</p>
                 <h4>Other</h4>
                 <p>I am targeting people who want to dress modestly and affordably.</p>
             </main>
