--- a/index.html/utahtech2/index.html
+++ b/index.html/utahtech2/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link> href="style.css" rel="stylesheet"
 <title>Utah Tech University</title>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
+    <div id="wrapper">
   <header>
    <h1>Utah Tech University</h1>
   </header>
@@ -17,7 +19,7 @@
   </nav>
   <main>
     <h2>About Utah Tech</h2>
-    <p>A Utah Tech education means active learning within all academic disciplines. Hands-on learning, industry partnerships, and a dynamic student-life experience prepare students for successful careers and meaningful lives.</p>
+    <p>A <span class="ut">Utah Tech</span> education means active learning within all academic disciplines. Hands-on learning, industry partnerships, and a dynamic student-life experience prepare students for successful careers and meaningful lives.</p>
     <h2>Our Education</h2>
     <ul>
       <li>Acceptance Rate: 100%</li>
@@ -76,7 +78,8 @@
   </main>
   <footer>
       Copyright &copy; 2025 Utah Tech University<br>
-      <a href="mailto:firstname.lastname@utahtech.edu">firstname.lastname@utahtech.edu</a>
+      <a href="katewhite@utsuccess.org">firstname.lastname@utahtech.edu</a>
   </footer>
+  </div>
 </body>
 </html>
