--- a/index.html/utahtech2/index.html
+++ b/index.html/utahtech2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link> href="style.css" rel="stylesheet"
+    <link rel="stylesheet" href="style.css">
 <title>Utah Tech University</title>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
