--- a/se1400/utahtech3/students.html
+++ b/se1400/utahtech3/students.html
@@ -17,6 +17,9 @@
       <a href="faculty.html">Faculty</a> &nbsp;
       <a href="alumni.html">Alumni</a>
   </nav>
+  <div id="studenthero">
+    <img src="images/students.jpg" alt="students" width="300px">
+  </div>
   <main>
     <h2>Why Attend Utah Tech?</h2>
     <dl>
