--- a/se1400/utahtech3/faculty.html
+++ b/se1400/utahtech3/faculty.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-<title>Utah Tech University :: Students</title>
+<title>Utah Tech University :: Faculty</title>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
 </head>
@@ -17,20 +17,17 @@
       <a href="faculty.html">Faculty</a> &nbsp;
       <a href="alumni.html">Alumni</a>
   </nav>
-  <div id="studenthero">
-    <img src="images/students.jpg" alt="students" width="300px">
+  <div id="facultyhero">
+    <img src="images/facultyhero.jpg" alt="students" width="300px">
   </div>
   <main>
-    <h2>Why Attend Utah Tech?</h2>
-    <dl>
-      <dt>Open</dt>
-      <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
-      <dt>Inclusive</dt>
-      <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
-      <dt>Comprehensive</dt>
-      <dd>Utah Tech offers programs in humanities, arts, education, health sciences, business, and STEM.</dd>
-      <dt>Polytechnic</dt> <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
-    </dl>
+    <h2>Faculty at Utah Tech University</h2>
+    <h3>Active  Learning</h3>
+    <p>Classes get students ready to enter the work industry and provide them with the skills needed today.</p>
+    <h3>Online Classes</h3>
+    <p>15% of classes at Utah Tech are online and accessible to those outside the region.</p>
+    <h3>Small Class Size</h3>
+    <p>Classes are small, averaging 20:1 student-to-teacher ratios.</p>
   </main>
   <footer>
       Copyright &copy; 2025 Utah Tech University<br>
