--- a/se1400/utahtech3/faculty.html
+++ b/se1400/utahtech3/faculty.html
@@ -18,7 +18,7 @@
       <a href="alumni.html">Alumni</a>
   </nav>
   <div id="facultyhero">
-    <img src="images/facultyhero.jpg" alt="students" width="300px">
+    <img src="images/facultyhero.jpg" alt="faculty" width="300px">
   </div>
   <main>
     <h2>Faculty at Utah Tech University</h2>
