--- a/se1400/utahtech4/index.html
+++ b/se1400/utahtech4/index.html
@@ -14,9 +14,9 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li></li><a href="students.html">Students</a></li>
-      <li></li><a href="faculty.html">Faculty</a></li>
-      <li></li><a href="alumni.html">Alumni</a></li>
+      <li><a href="students.html">Students</a></li>
+      <li><a href="faculty.html">Faculty</a></li>
+      <li><a href="alumni.html">Alumni</a></li>
     </ul>
   </nav>
   <div id="homehero"></div>
