--- a/se1400/utahtech4/index.html
+++ b/se1400/utahtech4/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="wrapper">
   <header>
-   <h1> <a href= "index.html" > Utah Tech University</h1></a>
+   <a href= "index.html" > Utah Tech University</a>
   </header>
   <nav>
     <ul>
