--- a/se1400/utahtech4/index.html
+++ b/se1400/utahtech4/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="wrapper">
   <header>
-   <a href= "index.html" > Utah Tech University</a>
+   <h1><a href= "index.html" > Utah Tech University</a></h1>
   </header>
   <nav>
     <ul>
