--- a/se1400/milestone3/index.html
+++ b/se1400/milestone3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-    <link rel="stylesheet" href="stylesheet.html">
+    <link rel="stylesheet" href="style.css">
     <title>Ovoce Designs</title>
     <meta charset="utf-8">
 </head>
